--- a/pom.xml
+++ b/pom.xml
@@ -27,5 +27,12 @@
             <artifactId>beansbinding</artifactId>
             <version>1.2.1</version>
         </dependency>
+        <dependency>
+            <groupId>com.google.code.gson</groupId>
+            <artifactId>gson</artifactId>
+            <version>2.8.9</version>
+            <type>jar</type>
+        </dependency>
     </dependencies>
+    <name>gestionartHTTPClient</name>
 </project>
